src/components/style.scss
@import './variables.scss';
@import '~bulma/bulma.sass';

.gradientBg {
  display: flex;
  background-image: linear-gradient(to right bottom, #056293, #006e9d, #007aa6, #0087ae, #0093b5, #00a2bb, #00b1bd, #00c0bc, #43d3ae, #7de499, #b9f081, #f9f871);
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer {
  display: flex;
  padding: 1.5rem 1.5rem;
  line-height: 1.5rem;
  a {
    border-bottom: 1px solid;
    color: black;
  }
  a:hover {
    color: $link;
  }
}

.container {
  color: white;
}

#bio-container {
  margin-bottom: 30px;
}

.profile-img {
  height: 8rem;
  width: 8rem;
  border-radius: 50%;
  box-shadow: 0px ​0px 35px -10px #ccc;
  -webkit-box-shadow: 0px ​0px 35px -10px #ccc;
  -moz-box-shadow: 0px ​0px 35px -10px #ccc;
}

.work-phrase::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 0.1em;
  background-color: hotpink;
  opacity: 0;
  transition: opacity 300ms, transform 300ms;
}

.emphasized-work-phrase {
  background-image: linear-gradient(120deg, #3dc25a 0%, #5b06aa 100%);
  background-repeat: no-repeat;
  background-size: 100% 0.2em;
  background-position: 0 88%;
  transition: background-size 0.25s ease-in;
}

.is-vh-height {
  height: 100vh;
}

.slide-in-btns-row a:last-child {
  margin-left: 10px;
}

.slide-in-btn {
  margin-top: 10px;
  opacity: 0;
  animation: fadeInOver 1s ease forwards;
}

.slide-in-btn:first-child {
  transform: translateX(-3rem);
}

.slide-in-btn:last-child {
  transform: translateX(-5rem);
}

.cta-btn-row {
  margin-top: 20px;
}

.cta-btn {
  opacity: 0;
  animation: fadeInUp 1s ease forwards;
  font-weight: bold;
  transform: translateY(3rem);
}

@keyframes fadeInOver {
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes fadeInUp {
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.work-phrases-row {
  margin-top: 40px;
}

.hi-im {
  line-height: 1.2;
  margin-bottom: 10px;
}

